# ebird-codes

./: CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  pyproject.toml
src/ebird/codes/: breeding.py  i18n.py  locations.py  protocols.py  species.py
src/ebird/codes/locales/: codes.pot
src/ebird/codes/locales/en/LC_MESSAGES/: codes.po
tests/locations/: test_is_location.py  test_is_national.py  test_is_subnational1.py  test_is_subnational2.py
