[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
name = "ebird-codes"
version = "0.0.1"
description = "Utiltities for dealing with eBird codes."
keywords = ["eBird", "codes", "database", "utilities"]
license = { file = "LICENSE" }
authors = [
  {name = "Stuart MacKay", email = "smackay@flagstonesoftware.com"},
]
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/ProjectBabbler/ebird-codes.git"
Issues = "https://github.com/ProjectBabbler/ebird-codes/issues"
Changelog = "https://github.com/ProjectBabbler/ebird-codes/blob/master/CHANGELOG.rst"

[tool.bumpversion]
current_version = "0.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
ignore_missing_version = false
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "New version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "New version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "src/ebird/codes/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
search = """
Latest
------"""
replace = """
Latest
------

{new_version} ({now:%Y-%m-%d})
------------------"""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
    tox>=4.2
    tox-uv>=1.11.3
envlist = py38, py39, py310, py311, py312

[testenv]
commands = pytest
deps =
    pytest
setenv =
    PYTHONPATH = src
"""

[tool.uv]
dev-dependencies = [
    "bump-my-version>=0.28.0",
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "tox>=4.23.1",
    "tox-uv>=1.11.3",
    "pre-commit>=3.5.0",
    "ruff>=0.8.0",
]
